z-index fixes

--- a/app/appStyles/z_index_partial.scss
+++ b/app/appStyles/z_index_partial.scss
@@ -1,20 +1,25 @@
 $z-index: (
-  getSupport: 99986,
-  scroller: 99987,
-  treeCheckbox: 99988,
-  accordian: 99989,
-  dropdown: 99990,
-  absolute: 99991,
-  errorPageStyle: 99992,
-  buildFadeBg: 99993,
-  checklistArea: 99994,
-  dropdownMenu: 99995,
-  popover: 99996,
-  modal: 99997,
-  toast: 99998,
-  loader: 99999,
-  calendar: 99999,
-  iframe: 99999
+  getSupport: 99999,
+  editableInput: 9800,
+  scroller: 9830,
+  treeCheckbox: 9840,
+  accordian: 9850,
+  inviteTrigger: 10,
+  dropdown: 9860,
+  absolute: 9870,
+  errorPageStyle: 9880,
+  buildFadeBg: 9890,
+  checklistArea: 9900,
+  dropdownMenu: 9910,
+  modalMask: 9911,
+  modalWrapper: 9912,
+  popover: 9940,
+  tooltip: 9950,
+  modal: 9960,
+  toast: 9990,
+  loader: 9990,
+  calendar: 9990,
+  iframe: 9990
 );
 @function z-index($key) {
   @return map-get($z-index, $key);
